# hikari-kasai

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: index.js  requirements.txt
docs/kasai/: bot.html  channels.html  entity_factory.html  errors.html  events.html  games.html  index.html  messages.html  streams.html  traits.html  twitch.html  users.html  ux.html
docs/source/: conf.py  index.rst
docs/source/api/: bot.rst  channels.rst  errors.rst  events.rst  irc.rst  messages.rst  twitch.rst  users.rst
docs/templates/: config.mako  css.mako  search.mako
examples/: README.md  basic_bot.py  lightbulb_bot.py
kasai/: __init__.py  __main__.py  banner.txt  bot.py  channels.py  entity_factory.py  errors.py  events.py  games.py  irc.py  messages.py  streams.py  traits.py  twitch.py  users.py  ux.py
requirements/: base.txt  dev.txt
tests/: test_app.py  test_channels.py  test_entity_factory.py  test_streams.py  test_twitch_client.py  test_users.py
